--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = ">=3.10"
 typer = "^0.9.0"
 rich = "^13.7.1"
 more-itertools = "^10.2.0"
+GitPython = "^3.1.43"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
