--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "blueprint"}]
 
 [tool.poetry.dependencies]
 python = ">=3.10"
-typer = "^0.9.0"
+typer = {extras = ["all"], version = "^0.12.3"}
 rich = "^13.7.1"
 more-itertools = "^10.2.0"
 GitPython = "^3.1.43"
