update setup.cfg to be latest and greatest

--- a/sources/python/setup.cfg
+++ b/sources/python/setup.cfg
@@ -4,13 +4,25 @@
 
 max-line-length = 88
 
-# ignore errors in addition to the ones in ~/.flake8
-#
+# See also:
+# - https://flake8.pycqa.org/en/latest/user/error-codes.html#error-violation-codes
+# - https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
+
 # BLK100: Black would make changes
 # E266: too many leading '#' for block comment
-# E266, W503, W504
+# W503: line break before binary operator
+# W504: line break after binary operator
+
 extend-ignore = BLK100
 
-# per-file-ignores =
-#   tests/test_*: D100, D103, F401, F811, D205, D400
+# D100: Missing docstring in public module
+# D103: Missing docstring in public function
+# D202: No blank lines allowed after function docstring
+# D205: 1 blank line required between summary line and description
+# D400: First line should end with a period
+# E221: multiple spaces before operator [
+# F401: module imported but unused
 
+per-file-ignores =
+  test_*: :D100, D103, D202, D205, D400
+  tests/*: D100, D103, F811, D205, D400, D202
