Include sources/ in build.

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,13 @@ max-line-length = 88
 extend-ignore = BLK100
 
 # F401: imported but unused
+# D100: Missing docstring in public module
+# D400: First line should end with a period.
+# D403: First word of the first line should be properly capitalized
+# D202: No blank lines allowed after function docstring
+#
 per-file-ignores =
-  tests/**/test_*: D100, D103, F811, D205, D400, D202
+  tests/test_*: D100, D103, F811, D205, D400, D403, D202
   tests/*: D100, D103, F811, D205, D400, D202
   #
   # E201: whitespace after '('
