--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
 readme = "README.md"
 packages = [{include = "blueprint"}]
 include = [
-  { path = "sources", format = ["sdist", "wheel"] }
+  { path = "sources", format = ["sdist", "wheel"] },
+  # negate ignore settings
+  { path = "sources/bare/.*", format = ["sdist", "wheel"] },
+  { path = "sources/python/.*", format = ["sdist", "wheel"] },
 ]
 
 [tool.poetry.dependencies]
@@ -28,6 +31,7 @@ flake8-black = "^0.3.6"
 flake8-isort = "^6.1.1"
 flake8-docstrings = "^1.7.0"
 pylama = "^8.4.1"
+toml = "^0.10.2"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
